WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195820
[iOS] Focus not preserved when switching between tabs
https://bugs.webkit.org/show_bug.cgi?id=195820
Summary
[iOS] Focus not preserved when switching between tabs
Daniel Bates
Reported
2019-03-15 14:33:39 PDT
Steps to reproduce: 1. Open a tab with <
https://www.wikipedia.org
>. 2. Open a tab with <
https://www.apple.com
>, click the site search icon and type "iPad". 3. Switch to the Wikipedia tab using Command + 1 (or whatever number the Wikipedia tab is). 4. Switch back to the Apple.com tab using Command + 2 (or whatever number the Apple tab is). The site search field will be defocused and needs to be explicitly focused to be able to type.
Attachments
Patch and tests
(7.49 KB, patch)
2019-03-15 15:10 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
To land
(7.42 KB, patch)
2019-03-19 11:24 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2019-03-15 14:33:52 PDT
<
rdar://problem/43614450
>
Daniel Bates
Comment 2
2019-03-15 15:10:15 PDT
Created
attachment 364853
[details]
Patch and tests
Brent Fulgham
Comment 3
2019-03-18 21:19:21 PDT
Comment on
attachment 364853
[details]
Patch and tests View in context:
https://bugs.webkit.org/attachment.cgi?id=364853&action=review
r=me
> Source/WebKit/ChangeLog:9 > + Fixes an usability annoyance when using a hardware keyboard; focus is not preserved when switching between tabs.
"a usability"
Daniel Bates
Comment 4
2019-03-19 11:24:34 PDT
Created
attachment 365188
[details]
To land
Daniel Bates
Comment 5
2019-03-19 11:25:32 PDT
Committed
r243153
: <
https://trac.webkit.org/changeset/243153
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug