Source/WebKit/UIProcess/ios/WKContentViewInteraction.h
@@ -311,6 +311,7 @@ struct WKAutoCorrectionData {
 
     BOOL _becomingFirstResponder;
     BOOL _resigningFirstResponder;
+    BOOL _dismissingAccessory;
     BOOL _needsDeferredEndScrollingSelectionUpdate;
     BOOL _isChangingFocus;
     BOOL _isBlurringFocusedElement;
